# makemkv-oss

./: CMakeLists.txt  License.txt  Makefile.in  configure  makefile.common
debian/: changelog  control  copyright  rules
libabi/inc/lgpl/: expatabi.h  httpabi.h  libmabi.h  osslabi.h  sysabi.h  zlibabi.h
libabi/pssl/: ec_lcl.h  ec_lib.c  ec_mult.c  ecp_smpl.c  ecs_ossl.c
libabi/src/: httplinux.cpp  httpmac.cpp  httpwin.cpp  libm.c  ossl_aes.c  ossl_ec.c  ossl_sha.c  sys_linux.c  sys_linux.cpp  xpat.c  zlib.c
libdriveio/inc/driveio/: driveio.h  error.h  scsicmd.h  scsihlp.h
libdriveio/inc/lgpl/: byteorder.h  posixio.h  tcpip.h
libdriveio/src/: infolist.cpp  libdriveio.def  libdriveio.vers  scsihlp.cpp  srlist.cpp  stdquery.cpp  tipclient.cpp  tipcommon.cpp  tipcommon.h  tipserver.cpp
libdriveio/src/drives/: drive.h  pioneer.cpp  xboxhddvd.cpp
libebml/inc/ebml/: Debug.h  EbmlBinary.h  EbmlConfig.h  EbmlCrc32.h  EbmlElement.h  EbmlEndian.h  EbmlMaster.h  EbmlSInteger.h  EbmlString.h  EbmlUnicodeString.h  EbmlVersion.h  IOCallback.h  MemIOCallback.h
libebml/src/: Debug.cpp  EbmlBinary.cpp  EbmlCrc32.cpp  EbmlDate.cpp  EbmlElement.cpp  EbmlFloat.cpp  EbmlMaster.cpp  EbmlSInteger.cpp  EbmlString.cpp  EbmlUInteger.cpp  EbmlUnicodeString.cpp  EbmlVersion.cpp  IOCallback.cpp  MemIOCallback.cpp  StdIOCallback.cpp
libebml/src/platform/win32/: WinIOCallback.cpp
libffabi/inc/lgpl/: ffabi.h
libffabi/src/: audio_convert.c  audio_mix.c  ffabi.c  ffabicfg.h.in  internal.h  mlp.c  mpegaudiodecheader.h
libmakemkv/inc/lgpl/: cassert  smem.h  stdstring.h  stl.h  stlsort.h  world.h
libmakemkv/inc/libmkv/: ebmlwrite.h  internal.h  libmkv.h
libmakemkv/src/: ebmlwrite.cpp  libmakemkv.def  libmakemkv.vers  libmkv.cpp  stdstring.cpp  version.cpp  world.cpp
libmatroska/inc/matroska/: KaxBlock.h  KaxCluster.h  KaxConfig.h  KaxCues.h  KaxVersion.h
libmatroska/src/: KaxBlock.cpp  KaxBlockData.cpp  KaxCues.cpp  KaxCuesData.cpp  KaxSeekHead.cpp  KaxSemantic.cpp  KaxVersion.cpp
libmmbd/inc/libmmbd/: mmbd.h
libmmbd/src/: aacs.cpp  aacslog.cpp  aacslog.h  bdplus.cpp  bdplus.h  crypto.h  crypto_ossl.cpp  dstring.h  fakejni.h  libmmbd.def  libmmbd.vers  marmmbd.cpp  mmbd.cpp  mmbdipc.cpp  mmbdipc.h  mmconn.cpp  mmconn.h  nstring.cpp  utf8.cpp  utf8.h
makemkvgui/inc/: ver_num.h
makemkvgui/inc/QtExt/: NativeFileDialog.h
makemkvgui/inc/lgpl/: apdefs.h  aproxy.h  utf8.h
makemkvgui/src/: aboutbox.cpp  aboutbox.h  abutton.cpp  abutton.h  api_linux.cpp  api_posix.cpp  api_posix_shm.cpp  backupdlg.cpp  backupdlg.h  client.cpp  clt_pipe.cpp  clt_shm.cpp  clt_std.cpp  dirselectbox.cpp  dirselectbox.h  drivebox.cpp  drivebox.h  dstring.h  dvdbox.cpp  dvdbox.h  image.cpp  image_data.h  image_defs.h  image_linux.cpp  lineeditk.cpp  lineeditk.h  logic.cpp  logic_posix.cpp  logtext.cpp  logtext.h  lstring.cpp  main.cpp  mainwnd.cpp  mainwnd.h  margui.cpp  marshall.cpp  nativefiledialog.cpp  notify.cpp  notify.h  notify_linux.cpp  (+17 more)
makemkvgui/src/str/: en_utf16.cpp
mmccextr/: ccextractor.c  ccextractor.h  mmccextr.mak
mmccextr/lib_ccx/: activity.c  ccx_common_common.c  ccx_common_constants.h  ccx_common_option.c  ccx_common_option.h  ccx_common_platform.h  ccx_decoders_608.c  ccx_decoders_708.h  ccx_decoders_common.c  ccx_decoders_common.h  ccx_decoders_structs.h  ccx_demuxer.c  ccx_demuxer.h  ccx_encoders_common.c  ccx_encoders_common.h  ccx_encoders_helpers.c  ccx_encoders_helpers.h  ccx_encoders_srt.c  compile_info_real.h  file_buffer.h  file_functions.c  general_loop.c  lib_ccx.c  lib_ccx.h  output.c  params.c  params_dump.c  utility.c
mmgpl/: dvdnavsrv.cpp  dvdread.cpp  mmgpl.cpp  navapi.cpp
mmgpl/dvdnav/: dvdnav.c  dvdnav.h  dvdnav_internal.h  highlight.c  logger.c  logger.h  mmdvdnav.h  navbase.h  navigation.c  settings.c  version.h
mmgpl/dvdnav/vm/: decoder.c  decoder.h  getset.c  getset.h  play.c  play.h  rand.cpp  rand.h  vm.c  vm.h  vmcmd.c  vmcmd.h  vmget.c
mmgpl/dvdread/: bitreader.c  bswap.h  config.h  dvd_reader.h  dvdread_internal.h  ifo_read.c  ifo_read.h  ifo_types.h  logger.c  nav_read.c  nav_types.h
msvc/inc/: unistd.h
msvc/inc/lgpl/: getopt.h
msvc/src/glibc/: getopt_win32.c
sstring/inc/lgpl/: sstring.h
sstring/src/: sstring.cpp
